--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.0-alpha.42",
     "@vuelidate/validators": "^2.0.0-alpha.30",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vuetify": "^2.6.7"
   },
   "devDependencies": {
+    "@mdi/font": "^6.9.96",
     "@vitejs/plugin-vue": "^2.3.3",
+    "deepmerge": "^4.2.2",
+    "sass": "~1.32",
+    "sass-loader": "^13.0.2",
     "vite": "^2.9.12"
   }
 }
