--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.0-alpha.42",
     "@vuelidate/validators": "^2.0.0-alpha.30",
-    "vue": "^3.2.37",
-    "vuetify": "^2.6.7"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@mdi/font": "^6.9.96",
